--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,69 @@
-<div *ngFor="let user of user$">
-  <h2 *ngFor="let todolist of user.toDoListEntities">{{todolist.name}} <button>ADD TASK</button><button>ADDITIONAL BUTTON</button>
-    <p *ngFor="let task of todolist.taskEntities">{{task.content}} - {{task.title}} - {{task.status}}</p>
-  </h2>
-  <button>ADD LIST</button>
-<!--  <h3 *ngFor="let task of user.toDoListEntities[0].taskEntities">{{task.title}} - {{task.content}}</h3>-->
-</div>
+
+<html lang="en"><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="generator" content="Hugo 0.88.1">
+  <title>Carousel Template · Bootstrap v5.1</title>
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/carousel/">
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+</head>
+<body>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">ToDoLIST</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">LogIn</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <br><br><br><br>
+</header>
+<main>
+  <div class="container">
+    <div >
+      <div  *ngFor="let user of user$">
+        <h2 class="bg-light p5 rounded" *ngFor="let todolist of user.toDoListEntities">{{todolist.name}}<button type="button" class="btn btn-dark" style="margin-left: 15px" (click)="hideFunction()">SHOW TASKS</button> <button style="margin-left: 10px" type="button" class="btn btn-success">ADD TASK</button><button style="margin-left: 10px" type="button" class="btn btn-info">ADD USER</button>
+          <div *ngIf="p1">
+            <p *ngFor="let task of todolist.taskEntities">{{task.content}} - {{task.title}} - {{task.status}}</p>
+
+          </div>
+          <br>
+        </h2>
+        <button>ADD LIST</button>
+        <!--  <h3 *ngFor="let task of user.toDoListEntities[0].taskEntities">{{task.title}} - {{task.content}}</h3>-->
+      </div>
+    </div>
+    <hr class="featurette-divider">
+  </div>
+  <footer class="container">
+    <p class="float-end"><a href="#">Back to top</a></p>
+  </footer>
+</main>
+</body></html>
