Popups for AddTask and AddUser without functionality

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,7 @@
   display: none;
 }
 .popup .content {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
@@ -33,7 +33,7 @@
 }
 .popup .close-btn {
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   right: 20px;
   top: 20px;
   width: 30px;
