Add task functionality added + checkbox status

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,10 @@
+.userList {
+  width: 100%;
+  float: left;
+}
+.userButtons {
+  float: right;
+}
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
