--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,8 @@
 <div class="popup" id="popup2">
   <div class="overlay"></div>
   <div class="content">
-    <div class="close-btn" (click)="togglePopup2()">&times;</div>
-    <h1>Add List</h1>
+    <div class="close-btn" (click)="togglePopup2(0)">&times;</div>
+    <h1>Add Task</h1>
     <input id="taskInputTitle" type="text" placeholder="Title"><br>
     <input id="taskInputContent" type="text" placeholder="Content"><br><br>
     <button type="button" class="btn btn-primary" style="width: 200px" (click)="AddTask()">Submit</button>
@@ -32,7 +32,7 @@
   <div class="overlay"></div>
   <div class="content">
     <div class="close-btn" (click)="togglePopup3()">&times;</div>
-    <h1>Add List</h1>
+    <h1>Add User Access</h1>
     <input id="userName" type="text" placeholder="UserName"><br><br>
     <button type="button" class="btn btn-primary" style="width: 200px" (click)="AddUser()">Submit</button>
   </div>
@@ -63,20 +63,23 @@
     <div >
       <div class="userList" *ngFor="let user of user$">
         <h2 class="bg-light p5 rounded" *ngFor="let todolist of user.toDoListEntities">{{todolist.name}}
+          <div class="userButtons">
           <button type="button" class="btn btn-dark" style="margin-left: 15px" (click)="hideFunction(todolist.name)">SHOW TASKS</button>
-          <button style="margin-left: 10px" type="button" class="btn btn-success" (click)="togglePopup2()">ADD TASK</button>
+          <button style="margin-left: 10px" type="button" class="btn btn-success" (click)="togglePopup2(todolist.id)">ADD TASK</button>
           <button style="margin-left: 10px" type="button" class="btn btn-info" (click)="togglePopup3()">ADD USER</button>
-          <div class="{{todolist.name}}" style="display: none">
-            <p *ngFor="let task of todolist.taskEntities">{{task.title}} - {{task.content}} <input class="form-check-input" type="checkbox" value="" id="{{task.title}}" [ngClass]="CheckStatus(task.status)" (click)="Check(task.title)"></p>
           </div>
+          <div class="{{todolist.name}}" style="display: none" *ngFor="let task of todolist.taskEntities">
+              <div class="{{task.title}}{{task.id}}">{{task.title}} - {{task.content}} <input class="form-check-input" type="checkbox" id="{{task.id}}" (click)="Check(task.id, task.title+task.id)"></div>
           <br>
+          </div>
         </h2>
-        <div class="text-center"><button type="button" class="btn btn-primary" style="width: 200px" (click)="togglePopup1()">ADD LIST</button></div>
+        <br><div class="text-center"><button type="button" class="btn btn-primary" style="width: 200px" (click)="togglePopup1()">ADD LIST</button></div>
+        <br>
       </div>
     </div>
     <hr class="featurette-divider">
   </div>
-  <footer class="container">
-  </footer>
+<!--  <footer class="container">-->
+<!--  </footer>-->
 </main>
 </body></html>
