--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -67,4 +67,13 @@
     font-size: 3.5rem;
   }
 }
+.unchecked {
 
+}
+.checked {
+  text-decoration: line-through;
+}
+.btn-danger {
+  position: static;
+  float: right;
+}
