--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,8 +69,11 @@
           <button style="margin-left: 10px" type="button" class="btn btn-info" (click)="togglePopup3()">ADD USER</button>
           </div>
           <div class="{{todolist.name}}" style="display: none" *ngFor="let task of todolist.taskEntities">
-              <div class="{{task.title}}{{task.id}}">{{task.title}} - {{task.content}} <input class="form-check-input" type="checkbox" id="{{task.id}}" (click)="Check(task.id, task.title+task.id)"></div>
-          <br>
+              <br>
+              <div [ngClass]="CheckIni(task.status)" class="{{task.title}}{{task.id}}">{{task.title}} - {{task.content}}
+              <input class="form-check-input" type="checkbox" id="{{task.id}}" [checked]="task.status" (click)="Check(task.id, task.title+task.id, task.title, task.content)">
+              <button type="button" class="btn btn-danger">DELETE</button>
+              </div>
           </div>
         </h2>
         <br><div class="text-center"><button type="button" class="btn btn-primary" style="width: 200px" (click)="togglePopup1()">ADD LIST</button></div>
