--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,20 +62,21 @@
   <div class="container">
     <div >
       <div class="userList" *ngFor="let user of user$">
-        <h2 class="bg-light p5 rounded" *ngFor="let todolist of user.toDoListEntities">{{todolist.name}}
+        <h3 class="bg-light p5 rounded" *ngFor="let todolist of user.toDoListEntities"><h1><a style="cursor: pointer; user-select: none" (click)="hideFunction(todolist.name + todolist.id)">{{todolist.name}}</a>
           <div class="userButtons">
-          <button type="button" class="btn btn-dark" style="margin-left: 15px" (click)="hideFunction(todolist.name)">SHOW TASKS</button>
-          <button style="margin-left: 10px" type="button" class="btn btn-success" (click)="togglePopup2(todolist.id)">ADD TASK</button>
-          <button style="margin-left: 10px" type="button" class="btn btn-info" (click)="togglePopup3()">ADD USER</button>
+<!--          <button type="button" class="btn btn-primary" style="margin-left: 15px" (click)="hideFunction(todolist.name)">SHOW TASKS</button>-->
+          <button style="margin-left: 10px" type="button" class="btn btn-info" (click)="togglePopup2(todolist.id)">ADD TASK</button>
+<!--          <button style="margin-left: 10px" type="button" class="btn btn-success" (click)="togglePopup3()">ADD USER</button>-->
+            <button style="margin-left: 10px" type="button" class="btn btn-dark"(click)="DeleteList(todolist.id)">DELETE</button>
           </div>
-          <div class="{{todolist.name}}" style="display: none" *ngFor="let task of todolist.taskEntities">
-              <br>
+        </h1>
+          <div class="{{todolist.name + todolist.id}}" style="margin-top: 10px" *ngFor="let task of todolist.taskEntities">
               <div [ngClass]="CheckIni(task.status)" class="{{task.title}}{{task.id}}">{{task.title}} - {{task.content}}
               <input class="form-check-input" type="checkbox" id="{{task.id}}" [checked]="task.status" (click)="Check(task.id, task.title+task.id, task.title, task.content)">
-              <button type="button" class="btn btn-danger">DELETE</button>
-              </div>
+              <button style="position: static; float: right" type="button" class="btn btn-secondary"(click)="DeleteTask(todolist.id, task.id)">DELETE</button>
           </div>
-        </h2>
+          </div>
+        </h3>
         <br><div class="text-center"><button type="button" class="btn btn-primary" style="width: 200px" (click)="togglePopup1()">ADD LIST</button></div>
         <br>
       </div>
